--- a/info/task_description.html
+++ b/info/task_description.html
@@ -5,7 +5,7 @@
 </p>
 
 <p>
-    What you need to do is to aggregate those values into a dict, which is easy, you can simply use function disc for that. But, name is not unique, so if you find more that one elements with the same name, you should sum their counters in the aggregated dict. 
+    What you need to do is to aggregate those values into a dict, which is easy, you can simply use function dict for that. But, name is not unique, so if you find more that one elements with the same name, you should sum their counters in the aggregated dict. 
 </p>
 
 
